--- a/app/bower.json
+++ b/app/bower.json
@@ -7,7 +7,7 @@
     "fontawesome": "~4.3.0",
     "google-code-prettify": "~1.0.4",
     "jquery": "~2.1.3",
-    "jquery-waypoints": "~3.1.1",
+    "jquery-waypoints": "~3.1.1"
   },
   "private": true,
   "ignore": [
