--- a/app/package.json
+++ b/app/package.json
@@ -24,8 +24,11 @@
     "grunt-contrib-uglify": "~0.6.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-express": "~1.4.1",
-    "grunt-sass": "~0.17.0",
+    "grunt-sass": "1.0.0",
     "grunt-usemin": "^2.1.1",
     "load-grunt-tasks": "^3.1.0"
+  },
+  "devDependencies": {
+    "bower": "^1.5.2"
   }
 }
